# bulkWhatsppViaTwilio

./: .env_example  .gitignore  README.md  config.py  main.py  maintyc.py  play_notification.py  pyproject.toml  test.py  windows_notifications.py
data/: camiones_29_11.csv  camiones_y_camionetas.csv  carrillo.csv  extrema.csv  general.csv  gina.csv  invertraico.csv  la_estrella.csv  mulas.csv  opperar.csv  os.csv  patinetas.csv  pronto_pago.csv  temp.csv  test.csv  tractocamiones.csv  tractocamiones_bun.csv  transalud.csv
