[tool.poetry]
name = "send-content-api"
version = "0.1.0"
description = ""
authors = ["ossev <osna.sev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
twilio = "^8.10.2"
python-dotenv = "^1.0.0"
plyer = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
